--- a/GGM.Serializer.Protobuf/GGM.Serializer.Protobuf.csproj
+++ b/GGM.Serializer.Protobuf/GGM.Serializer.Protobuf.csproj
@@ -6,11 +6,7 @@
     <ProjectReference Include="..\GGM.Serializer\GGM.Serializer.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="GGMContext" Version="1.5.1" />
     <PackageReference Include="Google.Protobuf" Version="3.5.1" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="GGM.Context, Version=1.5.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\..\.nuget\packages\ggmcontext\1.5.1\lib\netcoreapp2.0\GGM.Context.dll</HintPath>
-    </Reference>
   </ItemGroup>
 </Project>
