--- a/DemoServer/DemoServer.csproj
+++ b/DemoServer/DemoServer.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\GGM.Serializer.Protobuf\GGM.Serializer.Protobuf.csproj" />
     <ProjectReference Include="..\GGM.TempleteResolver.Razor\GGM.TempleteResolver.Razor.csproj" />
+    <ProjectReference Include="..\GGM.Web.MessageExample\GGM.Web.MessageExample.csproj" />
     <ProjectReference Include="..\GGM.Web\GGM.Web.csproj" />
   </ItemGroup>
   <ItemGroup>
