--- a/DemoServer/DemoServer.csproj
+++ b/DemoServer/DemoServer.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\GGM.Serializer.Protobuf\GGM.Serializer.Protobuf.csproj" />
-    <ProjectReference Include="..\GGM.TempleteResolver.Razor\GGM.TempleteResolver.Razor.csproj" />
+    <ProjectReference Include="..\GGM.TemplateResolver.Razor\GGM.TemplateResolver.Razor.csproj" />
     <ProjectReference Include="..\GGM.Web.MessageExample\GGM.Web.MessageExample.csproj" />
     <ProjectReference Include="..\GGM.Web\GGM.Web.csproj" />
   </ItemGroup>
