--- a/GGM.Web/GGM.Web.csproj
+++ b/GGM.Web/GGM.Web.csproj
@@ -1,9 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <Version>1.1.0</Version>
+    <Description>GGM.Application에서 이용할 수 있는 WebSerivce입니다.</Description>
+    <Copyright>
+    </Copyright>
+    <PackageLicenseUrl>https://github.com/GoodGoodManGames/GGM.Application/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/GoodGoodManGames/GGM.Web</PackageProjectUrl>
+    <PackageIconUrl>https://avatars1.githubusercontent.com/u/32609950?s=200&amp;v=4</PackageIconUrl>
+    <RepositoryType>
+    </RepositoryType>
+    <RepositoryUrl>https://github.com/GoodGoodManGames/GGM.Web</RepositoryUrl>
+    <PackageTags>GGM</PackageTags>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="GGM.Application" Version="1.5.1" />
+    <PackageReference Include="GGM.Application" Version="1.6.1" />
     <PackageReference Include="RazorLight" Version="2.0.0-beta1" />
   </ItemGroup>
   <ItemGroup>
