--- a/GGM.Web/GGM.Web.csproj
+++ b/GGM.Web/GGM.Web.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <Version>1.0.0-beta1</Version>
+    <Description />
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="GGM.Application" Version="1.5.1" />
