netcoreapp2.0 과 net461 동시지원

--- a/GGM.Web/GGM.Web.csproj
+++ b/GGM.Web/GGM.Web.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFrameworks>net461;netcoreapp2.0</TargetFrameworks>
     <Version>1.1.5</Version>
     <Description>GGM.Application에서 이용할 수 있는 WebSerivce입니다.</Description>
     <Copyright>
